--- a/src/main/resources/nomina.jrxml
+++ b/src/main/resources/nomina.jrxml
@@ -95,7 +95,7 @@
                     <bottomPen lineWidth="2.0"/>
                 </box>
                 <textElement verticalAlignment="Bottom"/>
-                <text><![CDATA[Static Text]]></text>
+                <text><![CDATA[Cide]]></text>
             </staticText>
             <staticText>
                 <reportElement x="100" y="10" width="180" height="20" uuid="adf5562e-a3cc-4695-b167-aa9413cb3204"/>
@@ -103,7 +103,7 @@
                     <bottomPen lineWidth="2.0"/>
                 </box>
                 <textElement verticalAlignment="Bottom"/>
-                <text><![CDATA[Static Text]]></text>
+                <text><![CDATA[Sant Vicennç de paül]]></text>
             </staticText>
             <staticText>
                 <reportElement x="100" y="30" width="180" height="20" uuid="b52f7f7f-fef5-4f6a-8f5d-59a6b6d2bd53"/>
@@ -111,7 +111,7 @@
                     <bottomPen lineWidth="2.0"/>
                 </box>
                 <textElement verticalAlignment="Bottom"/>
-                <text><![CDATA[Static Text]]></text>
+                <text><![CDATA[45953515F]]></text>
             </staticText>
             <staticText>
                 <reportElement x="100" y="50" width="180" height="20" uuid="ebb41032-365a-4f98-933f-c90614ec4184"/>
@@ -119,7 +119,7 @@
                     <bottomPen lineWidth="2.0"/>
                 </box>
                 <textElement verticalAlignment="Bottom"/>
-                <text><![CDATA[Static Text]]></text>
+                <text><![CDATA[01123456742]]></text>
             </staticText>
             <staticText>
                 <reportElement x="280" y="50" width="100" height="20" uuid="6fc0a20b-3e89-4467-881d-d5bc220f08b0"/>
