--- a/src/main/resources/templates/nominaGenerada.html
+++ b/src/main/resources/templates/nominaGenerada.html
@@ -173,7 +173,7 @@
                         </td>
                         <td colspan="4" rowspan="3"
                             style="border-bottom: 2px solid #000000; text-indent: 0px;  vertical-align: middle;text-align: center;">
-                            <span style="font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif; color: #000000; font-size: 10px; line-height: 1.2578125;">Text Field</span>
+                            <span style="font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif; color: #000000; font-size: 10px; line-height: 1.2578125;"></span>
                         </td>
                         <td colspan="3">
                         </td>
@@ -186,11 +186,11 @@
                         </td>
                         <td colspan="20"
                             style="border-bottom: 2px solid #000000; text-indent: 0px;  vertical-align: middle;text-align: left;">
-                            <span style="font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif; color: #000000; font-size: 10px; line-height: 1.2578125;">Text Field</span>
+                            <span style="font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif; color: #000000; font-size: 10px; line-height: 1.2578125;"></span>
                         </td>
                         <td colspan="9"
                             style="border-bottom: 2px solid #000000; text-indent: 0px;  vertical-align: middle;text-align: left;">
-                            <span style="font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif; color: #000000; font-size: 10px; line-height: 1.2578125;">Text Field</span>
+                            <span style="font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif; color: #000000; font-size: 10px; line-height: 1.2578125;"></span>
                         </td>
                         <td colspan="5" style="text-indent: 0px;  vertical-align: middle;text-align: center;">
                             <span style="font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif; color: #000000; font-size: 10px; line-height: 1.2578125;">N.ºdias</span>
