HAY QUE COMENTAR COJONES YA!

--- a/src/main/resources/templates/reporteGenerado.html
+++ b/src/main/resources/templates/reporteGenerado.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>ReporteGenerado</title>
 </head>
 <body>
-    <h1>ReporteGenrado</h1>
+<h1>ReporteGenrado en "<span th:text="${report}"></span>"</h1>
 </body>
 </html>
