--- a/src/main/resources/templates/nomina.html
+++ b/src/main/resources/templates/nomina.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="ISO-8859-1">
-  <title>Nomina</title>
+    <meta charset="ISO-8859-1">
+    <title>Nomina</title>
 </head>
 <body>
 <div align="center">
-  <h1>Generate Nominas</h1>
-  <form action="#" th:action="@{/nomina}" method="post" th:object="${dni}">
-    <label>DNI:</label>
-    <input type="text" th:field="*{dni}" /><br/>
-
-    <button type="submit">Generate</button>
-  </form>
+    <h1>Generate Nominas</h1>
+    <p>Selecciona un Dni de trabajador</p>
+    <form action="#" th:action="@{/nomina}" method="post" th:object="${dni}">
+        <label>DNI:</label>
+        <select th:field="*{dni}">
+            <option th:each="p : ${dnis}" th:value="${p}" th:text="${p}"/>
+        </select>
+        <button type="submit">Generate</button>
+    </form>
 </div>
 </body>
 </html>
